added-styling-to-buttons

--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -40,9 +40,7 @@
                     =f.hidden_field :id, value: "#{params[:id]}"
                     =f.text_field :body
                     %br
-                    =f.submit "Submit",
-
-
+                    =f.submit "Submit"
 
     %div{:class => 'col-2-3'}
       %div.flight_chart
