--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,10 +1,9 @@
 <header id="flights-header"><h1>Flights</h1></header>
 
 <div id="flights-body">
-
   <% if current_user %>
   <div class="flights-row-header">Friends' Flights</div>
-  <div class="flights-row-body">
+  <div id="friends-flights" class="flights-row-body">
     <% @flights.each do |flight| %>
     <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
