--- a/app/assets/stylesheets/modules/navbar.css
+++ b/app/assets/stylesheets/modules/navbar.css
@@ -59,9 +59,9 @@ nav a {
   background: lightgray;
 }
 /* Log-in ------------ */
-input {
+/*input {
   color: black;
-}
+}*/
 .menu {
   display: none;
 }
