--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -41,6 +41,13 @@
                     =f.text_field :body
                     %br
                     =f.submit "Submit"
+          %input{type: "submit", value: "show comments", id: "show_comments"}
+          #comment_roll
+            -@f_comments.each do |comment|
+              .comment_body
+                = comment.body
+                %br
+                = comment.author.username
 
     %div{:class => 'col-2-3'}
       %div.flight_chart
@@ -63,22 +70,12 @@
       #gauge_1
       #gauge_4
 
-  =form_for :likes, html: {id: "like"} do |f|
-    =f.hidden_field :id, value: "#{params[:id]}"
-    =f.submit "LIKE: #{@flight.likes.length}" , class: 'like_button', id: "like_num"
-  %input{type: "submit", value: "COMMENT", id: "toggle_comment"}
-  #comment
-    =form_for :comments, html: {id: "post_comment"} do |f|
-      =f.hidden_field :id, value: "#{params[:id]}"
-      =f.text_field :body
-      %br
-      =f.submit "Submit"
-  #comment_roll
-    -@f_comments.each do |comment|
-      .comment_body
-        = comment.body
-        %br
-        = comment.author.username
+  / #comment_roll
+  /   -@f_comments.each do |comment|
+  /     .comment_body
+  /       = comment.body
+  /       %br
+  /       = comment.author.username
 
 
 
