--- a/app/assets/stylesheets/flights-index.css
+++ b/app/assets/stylesheets/flights-index.css
@@ -6,103 +6,47 @@
   color: white;
   font-size: 48px;
 }
-
 #flights-body {
   display: flex;
   flex-flow: column;
   height: auto;
-  background: white;
+  background: rgb(25, 25, 25);
 }
 .flights-row-header {
   height: 28px;
-  background: rgb(25, 25, 25);
   text-align: left;
-  padding-left: 25px;
+  padding-left: 35px;
   font-family: 'Armata', sans-serif;
   color: white;
   font-size: 18px;
 }
-.flights-row-body {
-  position: relative;
-  height: 100px;
-  background: lightblue;
-  padding: 0 25px;
-  overflow: auto;
-  white-space: nowrap;
-}
 .each-flight {
   display: inline-block;
-  height: 80px;
-  width: 120px;
+  height: 160px;
+  width: 260px;
   background: white;
-  border: 1px solid lightgray;
-  margin: 9px;
+  margin: 10px;
 }
 .each-flight a {
   font-family: 'Armata', sans-serif;
   color: black;
   text-decoration: none;
 }
-.left-scroll {
-  display: none;
-}
-.flights-row-body:hover .left-scroll {
-  display: block;
-  position: absolute;
-  width: 50px;
-  height: 100%;
-  left: 25px;
-  top: 0;
-  background: rgba(19,19,19, .2);
-  border: none;
-}
-.left-scroll i {
-  color: white;
-}
-.right-scroll {
-  display: none;
-}
-.flights-row-body:hover .right-scroll {
-  display: block;
-  position: absolute;
-  width: 50px;
-  height: 100%;
-  right: 25px;
-  top: 0;
-  background: rgba(19,19,19, .2);
-  border: none;
-}
-.right-scroll i {
-  color: white;
-}
-#flights-footer {
-  width: 100%;
-  height:200px;
-}
-
-
-
-
-#makeMeScrollable {
-  width:100%;
-  height: 330px;
+.flights-row-body {
   position: relative;
+  height: 180px;
+  padding: 0 25px;
+  overflow: auto;
+  white-space: nowrap;
+  margin-bottom: 30px;
 }
-
-/* Replace the last selector for the type of element you have in
-   your scroller. If you have div's use #makeMeScrollable div.scrollableArea div,
-   if you have links use #makeMeScrollable div.scrollableArea a and so on. */
-#makeMeScrollable div.scrollableArea img {
+.flights-row-body div.scrollableArea img {
   position: relative;
   float: left;
   margin: 0;
   padding: 0;
-  /* If you don't want the images in the scroller to be selectable, try the following
-     block of code. It's just a nice feature that prevent the images from
-     accidentally becoming selected/inverted when the user interacts with the scroller. */
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -o-user-select: none;
-  user-select: none;
+}
+#flights-footer {
+  width: 100%;
+  height:200px;
 }
