--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -58,7 +58,7 @@
           %grid{:class => 'col-3-4'}
             %h3 comments will go here
           %grid{:class => 'col-1-4'}
-            %button#chart_map_button Map
+            %button#chart_map_button MAP
             %button#button-play
               %i.fa.fa-play
             %button#button-pause
