toggle map-chart button

--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -59,7 +59,7 @@
             %h3 
               =tweet_button(via: "Ascent", text: "Tweet this shit!", count: "horizontal")
           %grid{:class => 'col-1-4'}
-            %button#chart_map_button Map
+            %button#chart_map_button MAP
             %button#button-play
               %i.fa.fa-play
             %button#button-pause
