--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -210,7 +210,7 @@ input[type="text"] {
 }
 
 #data_submit {
-  display: none;
+  visibility: hidden;
 }
 
 #submit_field {
@@ -224,6 +224,7 @@ input[type="text"] {
   height: 320px;
   overflow: scroll;
   font-size: 15px;
+  border-bottom: 1px solid black;
 }
 
 #show_comments{
