--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -56,7 +56,8 @@
       #below_chart
         %grid
           %grid{:class => 'col-3-4'}
-            %h3 comments will go here
+            %h3 
+              =tweet_button(via: "Ascent", text: "Tweet this shit!", count: "horizontal")
           %grid{:class => 'col-1-4'}
             %button#chart_map_button Map
             %button#button-play
