--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,28 +1,29 @@
-/ #profile_user.col-1-3
-/   .avatar_container
-/     =image_tag @user.avatar_url
-/   %h3.col-1-2= "#{@user.username}"
+#profile_user.col-1-4
+  =image_tag @user.avatar_url
+  .username= "#{@user.username}"
 
-#profile_friends.col-1-4
+#profile_friends.col-1-3
   %h3="#{@user.username}'s friends"
   %br
   %table#friends
     -@user.approved_friends.each do |friend|
       %tr
-        %td= image_tag friend.avatar_url(:avatar_thumb)
+        %td= link_to image_tag(friend.avatar_url(:avatar_thumb)), user_path(friend)
         %td.username= link_to friend.username, user_path(friend)
         %td.approved= link_to "unfriend", "/friendships/#{Friendship.find_by(user: @user, friend: friend).id}", method: :delete
     -if current_user == @user
       -@user.pending_friends.each do |friend|
         %tr
-          %td= image_tag friend.avatar_url(:avatar_thumb)
-          %td= link_to friend.username, user_path(friend)
+          %td= link_to image_tag(friend.avatar_url(:avatar_thumb)), user_path(friend)
+          %td.username= link_to friend.username, user_path(friend)
           %td.pending= "pending"
 
-#profile_flights.col-1-2
-  %h3="flights"
+#profile_flights.col-1-3
+  %h3="#{@user.username}'s flights"
   %br
   -@user.flights.each do |flight|
-    =link_to "#{flight.callsign}", flight_path(flight)
+    .flight{:style => "background-image: url(#{image_path flight.album_cover})"}
+      %p="#{flight.callsign}"
+
 
 
