--- a/app/assets/stylesheets/flights-index.css
+++ b/app/assets/stylesheets/flights-index.css
@@ -22,6 +22,7 @@
 }
 .each-flight {
   display: inline-block;
+  position: relative;
   height: 160px;
   width: 260px;
   background: white;
@@ -31,6 +32,10 @@
   font-family: 'Armata', sans-serif;
   color: black;
   text-decoration: none;
+  font-size: 20px;
+  height: 100%;
+  width: 100%;
+  padding-top: 25px;
 }
 .flights-row-body {
   position: relative;
