--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -5,13 +5,13 @@
   <div class="flights-row-header">Friends' Flights</div>
   <div id="friends-flights" class="flights-row-body">
     <% @flights.each do |flight| %>
-    <div class="each-flight" <% if flight.pictures.present? %> style="background: url(<%= flight.pictures.sample.image_url(:thumb).to_s %>) no-repeat; background-size: cover" <% else %> style="background: url(http://rack.0.mshcdn.com/media/ZgkyMDEzLzA3LzI5LzU1L2dydW1weWNhdC5kZmM3MC5wbmcKcAl0aHVtYgkxMjAweDYyNyMKZQlqcGc/f780e423/c84/grumpycat.jpg) no-repeat; background-size: cover" <% end %> ><%= link_to flight.callsign, flight_path(flight) %></div>
+    <div class="each-flight" <% if flight.pictures.present? %> style="background: url(<%= flight.pictures.sample.image_url.to_s %>) no-repeat; background-size: cover" <% else %> style="background: url(http://rack.0.mshcdn.com/media/ZgkyMDEzLzA3LzI5LzU1L2dydW1weWNhdC5kZmM3MC5wbmcKcAl0aHVtYgkxMjAweDYyNyMKZQlqcGc/f780e423/c84/grumpycat.jpg) no-repeat; background-size: cover" <% end %> ><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
   </div>
   <% end %>
 
   <div class="flights-row-header">Most Liked</div>
-  <div id="most-liked" class="flights-row-body">
+  <div id="most-liked" class="flights-row-body option">
     <% @flights.each do |flight| %>
     <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
@@ -25,7 +25,7 @@
   </div>
 
   <div class="flights-row-header">Flights Near You</div>
-  <div id="flights-near-you" class="flights-row-body">
+  <div id="flights-near-you" class="flights-row-body option">
     <% @flights_near_you.each do |flight| %>
     <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
@@ -39,7 +39,7 @@
   </div>
 
   <div class="flights-row-header">Longest Duration</div>
-  <div id="longest-duration" class="flights-row-body">
+  <div id="longest-duration" class="flights-row-body option">
     <% @flights.each do |flight| %>
     <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
