--- a/app/assets/stylesheets/base/typography.css
+++ b/app/assets/stylesheets/base/typography.css
@@ -2,14 +2,25 @@
   text-align:  center;
 }
 
+table {
+  font-family: Codystar;
+  color: #dddddd;
+}
+
 h1 {
-  font-size: 100px;
+  font-size: 48px;
+  font-family: Armata;
   color: white;
   margin: 0;
 }
 
 h2 {
-  color: #dddddd;
+  color: #7d7d7d;
+  font-size: 25px;
+}
+
+h3 {
+  font-family: Armata;
 }
 
 
