--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -25,5 +25,16 @@
     .flight{:style => "background-image: url(#{image_path flight.album_cover})"}
       %p="#{flight.callsign}"
 
+=form_for Launch.new do |f|
+  %p
+    %select{ name: "flights[flight_id]"}
+      -@user.flights.each do |flight|
+        %option{value: flight.id} "#{flight.callsign}"
+    %select{ name: "friends[friend_id]"}
+      -@user.friends.each do |friend|
+        %option{value: friend.id} "#{friend.username}"
+  %p
+    = f.submit "Add to flight!"
+
 
 
