moved the journey header from highcharts title to render in grid for alignment and display with map

--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -52,6 +52,8 @@
                 = comment.author.username
 
     %div{:class => 'col-2-3'}
+      %h2
+        The Journey
       %div.flight_chart
         = render :partial => 'data_visualizations/index'
 
