styled upload flights page

--- a/app/assets/stylesheets/flights-new.css
+++ b/app/assets/stylesheets/flights-new.css
@@ -1,17 +1,17 @@
-#pictures-header {
+#flightsnew-header {
   margin: 3% 0;
 }
-#flights-header h1 {
+#flightsnew-header h1 {
   color: white;
   font-size: 48px;
 }
-#photo-form div {
+.flightsnew-form div {
   display: block;
   width: 60%;
   margin: 20px auto;
   font-family: 'Armata', sans-serif;
 }
-#photo-form p {
+.flightsnew-form p {
   height: 50px;
   width: 50px;
   color: white;
@@ -22,32 +22,32 @@
   padding-top: 4px;
   padding-left: 1px;
 }
-#photo-form label {
-  color: white;
-  font-size: 22px;
-}
-#url-input {
-  width: 350px;
-  padding: 0 10px;
-}
-#or-div {
-  color: white;
-  font-size: 24px;
-}
-#photo-save {
+input[type="submit"].flight-save {
   border: 2px solid white;
   font-family: 'Armata', sans-serif;
   color: white;
   width: 200px;
   height: 45px;
+  margin-bottom: 25px;
 }
-#photo-save:hover {
+input[type="submit"].flight-save:hover {
   color: lightgray;
   color: black;
 }
-#picture_files {
+#or-div-flights {
+  color: white;
+  font-size: 24px;
+}
+#flightsnew-input {
+  width: 350px;
+  padding: 0 10px;
+}
+#file {
   width: 177px;
-  margin-bottom: 25px;
   color: white;
   font-size: 12px;
+}
+.flightsnew-form label {
+  color: white;
+  font-size: 22px;
 }
