--- a/app/assets/stylesheets/modules/navbar.css
+++ b/app/assets/stylesheets/modules/navbar.css
@@ -19,12 +19,30 @@ nav:hover a, nav:hover .signup, nav:hover .login, nav:hover #dropdown1, nav:hove
   font-family: 'Armata', sans-serif;
 }
 .flex-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-box;
   display: flex;
+  -webkit-flex-flow: row
+  -moz-flex-flow: row;
+  -ms-flex-direction: row;
+  -ms-flex-flow: row;
   flex-flow: row;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: justify;
   justify-content: flex-start;
 }
 .flexbox {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
+  display: -webkit-box;=
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-box;
   display: flex;
   padding: 0 20px;
 }
@@ -50,9 +68,22 @@ nav a {
   -webkit-transition-timing-function: linear, ease-in;
 }
 .flexbox-col {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: center;
+  -ms-flex-pack: justify;
   justify-content: center;
+  -webkit-box-flex: 1;
+  -moz-box-flex:  1;
+  -webkit-flex:  1;
+  -ms-flex:  1;
   flex: 1;
 }
 .flexbox-col:hover {
@@ -66,7 +97,15 @@ nav a {
   display: none;
 }
 .menu.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-box;
   display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-direction: column;
+  -ms-flex-flow: column;
   flex-flow: column;
   position: fixed;
   top: 50px;
@@ -207,19 +246,55 @@ form {
 .friend-list {
   width: 100%;
   height: 55px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-box;
   display: flex;
+  -webkit-flex-flow: row
+  -moz-flex-flow: row;
+  -ms-flex-direction: row;
+  -ms-flex-flow: row;
   flex-flow: row;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
   justify-content: flex-start;
 }
 .flex-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-box;
   display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-flex: 1;
+  -moz-box-flex:  1;
+  -webkit-flex:  1;
+  -ms-flex:  1;
   flex: 1;
 }
 .flex-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-box;
   display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
   justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-flex: 3;
+  -moz-box-flex:  3;
+  -webkit-flex:  3;
+  -ms-flex:  3;
   flex: 3;
   padding: 0 5px;
 }
