added rate of ascent gauge

--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -68,6 +68,7 @@
               %i.fa.fa-play
 
     .gauges{:class => 'grid grid-pad'}
+      #gauge_6
       #gauge_3
       #gauge_1
       #gauge_4
