--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -95,7 +95,7 @@ table {
   padding: 2%;
 }
 
-#gauge_1, #gauge_3, #gauge_4, #gauge_5 {
+#gauge_1, #gauge_3, #gauge_4, #gauge_5, #gauge_6 {
   display: inline-block;
   width: 30%;
   max-width: 300px;
