--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,55 +1,87 @@
-#profile_user {
-  position: relative;
-  height: 200px;
-  img {
-    position: absolute;
-    left: 10%;
-    top: 20%;
-    width: 30%;
+
+.profile_user {
+  height: 600px;
+  #avatar {
+    width: 200px;
+    height: 200px;
     display: inline-block;
+    background-size: 100%;
+    .edit {
+      display: none;
+      padding: 5%;
+      width: 75%;
+      margin: auto;
+      margin-top: 40%;
+      z-index: 10;
+      a {
+        text-decoration: none;
+      }
+    }
   }
   .username {
-    position: absolute;
-    left: 50%;
-    top: 50%;
     color: #ccc;
-    width: 30%;
     font-size: 1.7em;
+    margin: auto;
+    padding: 5%;
+  }
+  #avatar_form {
+    display: none;
+    margin: auto;
+    margin-top: -5%;
+    #url-input {
+      width: 80%;
+    }
   }
 }
 
-table#friends {
-  color: #ccc;
-  margin: auto;
-  a {
-    text-decoration: none;
-  }
-  .username {
-    font-size: 1.5em;
-    text-decoration: none;
-  }
-  .approved {
-    font-size: 1em;
-  }
-  .pending {
-    font-style: italic;
+
+.profile_friends {
+  height: 600px;
+  overflow: scroll;
+  table#friends {
+    color: #ccc;
+    margin: auto;
+    a {
+      text-decoration: none;
+    }
+    .username {
+      font-size: 1.5em;
+      text-decoration: none;
+    }
+    .unfriend {
+      font-size: 1em;
+    }
+    .pending {
+      font-style: italic;
+    }
   }
 }
 
-#profile_flights {
+
+.profile_flights {
+  height: 600px;
+  overflow: scroll;
   .flight {
-    display: inline-block;
-    width: 30%;
     height: 200px;
     margin: auto;
-    margin-right: 10%;
-    position: relative;
+    margin-bottom: 5%;
+    width: 30%;
+    background-repeat: none;
+    a {
+      text-decoration: none;
+      .callsign {
+        font-size: 1.5em;
+        padding-top: 40%;
+      }
+    }
   }
+}
+
+#add_users_to_flight {
+  clear: all;
+  width: 35%;
+  margin-left: 20%;
   p {
-    font-size: 1.5em;
-    color: black;
-    position: absolute;
-    top: 50%;
-    left: 25%;
+    display: inline-block;
   }
 }
