--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -27,7 +27,7 @@ button:active {
 }
 
 .like_button, #toggle_comment {
-  font-family: 'Unica One';
+  font-family: 'Armata';
   font-weight: bold;
   color: #999999;
   background: #191919;
@@ -40,7 +40,7 @@ button:active {
   border: 2px solid #999999;
   background: #191919;
   outline: none;
-  font-family: 'Unica One';
+  font-family: 'Armata';
   font-weight: bold;
   color: #999999;
   display: inline-block;
