--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -6,6 +6,7 @@
     height: 200px;
     display: inline-block;
     background-size: 100%;
+    border-radius: 100px;
     .edit {
       display: none;
       padding: 5%;
