added cancel button

--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -8,4 +8,5 @@
     <div><%= f.label :remote_avatar_url, "Load Image URL" %></div>
     <div><%= f.text_field :remote_avatar_url, id: "url-input",placeholder: "Image URL" %></div>
     <div><%= f.submit "Save Image", id: "avatar-save" %></div>
+    <div><%= f.submit "Cancel Avatar Upload", id: "avatar-cancel" %></div>
 <% end %>
