--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -11,12 +11,12 @@
   %br
   %table#friends
     -@user.approved_friends.each do |friend|
-      %tr{id: "#{Friendship.find_id(@user, friend)}"}
+      %tr{id: "#{Friendship.find_id(@user, friend)}", class: "remove-#{Friendship.find_id(@user, friend)}"}
         %td= link_to image_tag(friend.avatar_url(:avatar_thumb)), user_path(friend)
         %td.username= link_to friend.username, user_path(friend)
         %td.unfriend
           -if current_user == @user
-            %a{href: "#", value: "/friendships/#{Friendship.find_id(@user, friend)}"} unfriend
+            %a{href: "#", value: "/friendships/#{Friendship.find_id(@user, friend)}", } unfriend
     -if current_user == @user
       -@user.pending_friends.each do |friend|
         %tr
