--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -88,15 +88,29 @@ table {
 
 .gauges {
   display: block;
-  clear: both;
   width: 100%;
-  margin: 0 auto;
-  padding: 2%;
+  margin: -50px auto;
+  padding: 20px;
 }
 
-#gauge_1, #gauge_3, #gauge_4, #gauge_5, #gauge_6, #gauge_7 {
+#gauge_5 {
+  dispay: block;
+  width: 200px;
+  margin: auto;
+  height: 200px;
+}
+
+#gauge_6, #gauge_7 {
   display: inline-block;
-  width: 30%;
+  width: 100px;
+  height: 400px;
+  margin: 0 100px;
+
+}
+
+#gauge_1, #gauge_3, #gauge_4 {
+  display: inline-block;
+  width: 300px;
   max-width: 300px;
   }
 
@@ -165,11 +179,11 @@ desc {
 }
 
 .grid-pad {
-  padding: 2% 0 2% 2%;
+  padding:  0 0 30px 30px;
 }
 
 .grid-pad > [class*='col-']:last-of-type {
-  padding-right: 2%;
+  padding-right: 30px;
 }
 
 #comment{
