--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -1,6 +1,6 @@
 button {
   height: 50px;
-  border: 2px solid #4d1eb3;
+  border: 2px solid #ffffff;
   color: black;
   background-color: #f3f3f3;
 }
