added links at the bottom of import photos page

--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -11,5 +11,6 @@
     <div><%= f.text_field :remote_image_url, id: "url-input",placeholder: "Image URL" %></div>
     <div><%= f.submit "Save Image", id: "photo-save" %></div>
 <% end %>
-<%= link_to "Skip picture upload", controller: "flights", action: "show", id: @flight  %>
+<div id="contain1"><%= link_to "See Flight", flight_path(@flight), class: "links_bottom" %></div>
+<div id="contain2"><%= link_to "See Flight Photos", flight_pictures_path(@flight), class: "links_bottom" %></div>
 
