--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,5 +1,3 @@
-
-
 #comment_container {
   /*visibility: 'hidden';*/
   width: 100%;
@@ -90,11 +88,16 @@ tr input[type="submit"] {
 tr input[type="submit"]:hover {
   background: lightgray;
 }
-#comment-display {
-  display: block;
-  min-height: 40px;
+#comment_display {
+  text-align: left;
+  height: 30px;
   width: 100%;
-  background: gray;
+  color: white;
+  margin-left: 5%;
+}
+#comment_display p {
+  display: none;
+  margin: 0;
 }
 #comment_box form {
   height: 40px;
@@ -106,8 +109,7 @@ tr input[type="submit"]:hover {
   width: 80%;
 }
 #comment-submit {
-  width: 19%;
+  width: 15%;
+  margin-right: -5%;
 }
-#data_point {
-  /*display: none;*/
-}
+
