--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -4,7 +4,7 @@
   <% if current_user %>
   <div class="flights-row-header">Friends' Flights</div>
   <div id="friends-flights" class="flights-row-body">
-    <% @flights.each do |flight| %>
+    <% @friends_flights.each do |flight| %>
     <div class="each-flight" <% if flight.pictures.present? %> style="background: url(<%= flight.pictures.sample.image_url.to_s %>) no-repeat; background-size: cover" <% else %> style="background: url(http://rack.0.mshcdn.com/media/ZgkyMDEzLzA3LzI5LzU1L2dydW1weWNhdC5kZmM3MC5wbmcKcAl0aHVtYgkxMjAweDYyNyMKZQlqcGc/f780e423/c84/grumpycat.jpg) no-repeat; background-size: cover" <% end %> ><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
   </div>
@@ -12,7 +12,7 @@
 
   <div class="flights-row-header">Most Liked</div>
   <div id="most-liked" class="flights-row-body option">
-    <% @flights.each do |flight| %>
+    <% @most_liked.each do |flight| %>
     <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
   </div>
@@ -48,7 +48,7 @@
 
 <div class="flights-row-header">Greatest Distance Traveled</div>
 <div id="distance-traveled" class="flights-row-body">
-  <% @flights.each do |flight| %>
+  <% @greatest_distance.each do |flight| %>
   <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
   <% end %>
 </div>
