--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -64,11 +64,13 @@
               %i.fa.fa-play
 
     .gauges{:class => 'grid grid-pad'}
+      #gauge_6_info
       #gauge_6
       #gauge_3
       #gauge_1
       #gauge_4
       #gauge_7
+      #gauge_7_info
 
 #comment_container
   %header
