modified styling for point comments

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -100,7 +100,10 @@ tr input[type="submit"]:hover {
   margin-left: 5%;
 }
 #comment_display p {
-  display: none;
+  width: 80%;
+}
+#comment_display p, a {
+  /*display: none;*/
   margin: 0;
   font-family: 'Armata', sans-serif;
 }
