added time to burst to view

--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -13,20 +13,18 @@
               ="#{@flight.max_altitude} m"
             / %td
             /   ="#{to_feet(@flight.max_altitude)} ft"
-          / %tr
-          /   %td.tdleft Time to Burst
-          /   %td.tdright
-          /     ="#{@flight.time_to_burst}"
-          / %tr
-          /   %td.tdleft Time of Descent
-          /   %td.tdright
-          /     ="#{@flight.time_of_descent}"
-          / %tr
-          /   %
           %tr
             %td.tdleft Distance Traveled
             %td.tdright
               ="#{@flight.distance_traveled.round} km"
+          / %tr
+          /   %td.tdleft Time to Burst
+          /   %td.tdright
+          /     ="#{@flight.time_to_burst}"
+          %tr
+            %td.tdleft Time of Descent
+            %td.tdright
+              ="#{@flight.time_of_descent}"
 
           %tr
             %td.tdleft Trip Duration
