added time of descent to view

--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -17,10 +17,10 @@
             %td.tdleft Distance Traveled
             %td.tdright
               ="#{@flight.distance_traveled.round} km"
-          / %tr
-          /   %td.tdleft Time to Burst
-          /   %td.tdright
-          /     ="#{@flight.time_to_burst}"
+          %tr
+            %td.tdleft Time to Burst
+            %td.tdright
+              ="#{@flight.time_to_burst}"
           %tr
             %td.tdleft Time of Descent
             %td.tdright
