--- a/app/assets/stylesheets/pictures-index.css
+++ b/app/assets/stylesheets/pictures-index.css
@@ -9,21 +9,41 @@
 #picture-carousel {
   position: relative;
   width: 100%;
-  height: 440px;
+  height: 500px;
   padding: 0 25px;
   overflow: auto;
   background: rgb(19,19,19);
   white-space: nowrap;
 }
-#picture-carousel img {
+.img-container {
   display: inline-block;
   position: relative;
-  vertical-align: middle;
-  max-height: 390px;
+  height: auto;
   margin: 0 10px;
+}
+.img-container img {
+  max-height: 460px;
+  vertical-align: middle;
 }
 .helper {
   display: inline-block;
   height: 100%;
   vertical-align: middle;
+}
+.remove-pic {
+  display: none;
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  background: none;
+  color: maroon;
+  font-size: 20px;
+  font-family: 'Armata', sans-serif;
+  outline: none;
+  height: auto;
+  border: none;
+}
+.remove-pic:hover {
+  background:none;
+  color: white;
 }
