--- a/app/views/flights/new.html.erb
+++ b/app/views/flights/new.html.erb
@@ -1,7 +1,7 @@
 <header id="flightsnew-header"><h1>Upload Flights</h1></header>
 
 <%= form_tag import_flights_path, multipart: true, class: "flightsnew-form" do %>
-  <div><p>1</p></div>
+  <div><p>A</p></div>
   <div><%= label_tag 'flights-load', 'Load From Computer' %></div>
   <div><%= file_field_tag :file %></div>
   <div><%= submit_tag "Upload", class: 'flight-save' %></div>
@@ -10,7 +10,7 @@
 <div id="or-div-flights">-OR-</div>
 
 <%= form_for :flight, method: 'POST', url: {action: 'create'}, html: {class: "flightsnew-form"} do |f| %>
-  <div><p>2</p></div>
+  <div><p>B</p></div>
   <div><%= f.label :remote_image_url, "Load JSON URL" %></div>
   <div><%= f.text_field :new_flight, name: "new_flight[address]", placeholder: "Enter URL", id: "flightsnew-input" %></div>
   <div><%= f.submit 'Create Flight', class: 'flight-save' %></div>
