--- a/app/assets/stylesheets/modules/navbar.css
+++ b/app/assets/stylesheets/modules/navbar.css
@@ -61,7 +61,7 @@ nav:hover a, nav:hover .signup, nav:hover .login, nav:hover #dropdown1, nav:hove
 }
 nav a {
   text-decoration: none;
-  color: white;
+  color: black;
   font-family: 'Armata', sans-serif;
   -webkit-transition-property:color, text;
   -webkit-transition-duration: 0.5s, 0.5s;
@@ -233,7 +233,7 @@ form {
 #notification.active a {
   font-family: 'Armata', sans-serif;
   font-size: 16px;
-  color: #D1DBDD;
+  color: gray;
   padding-left: 10px;
 }
 #notification.active a:hover {
