--- a/app/views/friendships/_new.html.haml
+++ b/app/views/friendships/_new.html.haml
@@ -1,6 +1,7 @@
 =form_for :friendship, method: 'POST', url: {action: 'create'}, class: 'ui-widget' do |f|
-  =f.label :username
-  =f.autocomplete_field :username, autocomplete_username_users_path, id: 'autocomplete_username'
+  =f.autocomplete_field :username, autocomplete_username_users_path, id: 'autocomplete_username', placeholder: 'username'
+  %br
+  %br
   =f.submit 'Send Friend Request' , class: 'button'
 
 
